// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Integration should allow override composition 1`] = `
"<DependencyProvider use={{...}}>
  <DependencyProvider target={[Function: Label]} use={{...}}>
    <Label>
      <WrapperMock>
        <TextMockAlt />
      </WrapperMock>
    </Label>
    <Input>
      <TextMock />
    </Input>
  </DependencyProvider>
</DependencyProvider>"
`;

exports[`Integration should override all dependencies with same name 1`] = `
"<DependencyProvider use={{...}}>
  <Label>
    <Wrapper>
      <TextMock />
    </Wrapper>
  </Label>
  <Input>
    <TextMock />
  </Input>
</DependencyProvider>"
`;

exports[`Integration should override per type dependencies 1`] = `
"<DependencyProvider target={[Function: Label]} use={{...}}>
  <Label>
    <Wrapper>
      <TextMock />
    </Wrapper>
  </Label>
  <Input>
    <Text />
  </Input>
</DependencyProvider>"
`;

exports[`Integration should return real dependencies if disabled 1`] = `
"<DependencyProvider use={{...}}>
  <Label>
    <Wrapper>
      <Text />
    </Wrapper>
  </Label>
  <Input>
    <Text />
  </Input>
</DependencyProvider>"
`;

exports[`Integration should return real dependencies if provider less 1`] = `
"<Label>
  <Wrapper>
    <Text />
  </Wrapper>
</Label>


<Input>
  <Text />
</Input>"
`;
